Fix sparcs description

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
         <meta property="og:site_name" content="SPARCS">
         <meta property="og:type" content="website">
         <meta property="og:title" content="SPARCS">
-        <meta property="og:description" content="SPARCS: Programmers' Association for Researching Computer Systems">
+        <meta property="og:description" content="System Programmers' Association for Researching Computer Systems">
         <meta property="og:url" content="https://sparcs.org">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="SPARCS">
-        <meta name="twitter:description" content="SPARCS: Programmers' Association for Researching Computer Systems">
+        <meta name="twitter:description" content="System Programmers' Association for Researching Computer Systems">
         <meta name="twitter:url" content="https://sparcs.org">
         <meta name="twitter:image" content="/assets/twitter.png">
 
